<resources>
    <string name="app_name">GroupProject</string>
    <string name="add_mood">
        <font size="20"> "ADD MOOD EVENT"</font>
        <font size="13">\n"Add a new mood event to your history</font>
    </string>
    <string name="mood_history">
        <font size="20"> "MOOD HISTORY"</font>
        <font size="13">\n"View or edit previous moods"</font>
    </string>
    <string name="following">
        <font size="20"> "FOLLOWING"</font>
        <font size="13">\n"Request to follow other users"\n"View the moods of people you follow"</font>
    </string>
    <string name="followers">
        <font size="20"> "MAP"</font>
        <font size="13">\n"View mood events on a map"</font>
    </string>
    <string name="sign_out">SIGN OUT</string>
    <string name="sign_out_cancel">CANCEL</string>
    <string name="sign_out_confirm">sign out</string>
    <string name="UserName">Shia Labeouf</string>
    <string name="detailedMoodName">DetailedMoodName</string>
    <string name="detailTimestamp">DetailedTimeStamp</string>
    <string name="DetailedMoodName">DetailedMoodName</string>
    <string name="socialSituation">N/A</string>

    <!--    Adding all hardcoded string values here.-->
    <!--    layout: login_screen.xml-->
    <string name="app_title">   MOODY</string>
    <string name="subtitle">    Tell me how you really feel</string>
    <string name="username_field_hint"> Username</string>
    <string name="password_field_hint"> Password</string>
    <string name="sign_in_btn"> SIGN IN</string>
    <string name="no_account_lbl">Don\'t have an account</string>
    <string name="create_new_account_btn">Create one</string>
    <string name="credentialMessage">Invalid username or password</string>
    <string name="help">HELP</string>

    <!--    layout: v_user_list_layout.xml-->
    <string name="placeholder_follower">Luke Skywalker</string>
    <!--    layout: v_user_requests-->
    <string name="follow_requests_lbl">Follow Requests</string>
    <string name="current_followers_lbl">Current Followers</string>
    <string name="title_activity_relations">relations</string>

    <!--    ui.requests-->
    <string name="tab_text_relationship">Relations</string>
    <string name="tab_text_responses">Responses</string>
    <string name="accept_button">ACCEPT</string>
    <string name="reject_button">REJECT</string>

    <string name="tab_text_following">Following</string>
    <string name="tab_text_followers">Followers</string>
    <string name="tab_text_requests">Requests</string>
    <string name="confirm_button">CONFIRM</string>
    <string name="delete_button">DELETE</string>

    <string name="register_confirm">REGISTER</string>
    <string name="tab_text_my_relations">Relations</string>
    <string name="tab_text_my_responses">Responses</string>
    <string name="tab_text_followers">Followers</string>
</resources>
